--- a/packages/protobufs/package.json
+++ b/packages/protobufs/package.json
@@ -10,19 +10,23 @@
   ],
   "exports": {
     ".": {
-      "types": "./packages/ts/dist/mod.d.ts",
-      "default": "./packages/ts/dist/mod.js"
+      "types": "./packages/ts/dist/mod.ts",
+      "default": "./packages/ts/dist/mod.ts"
     },
     "./*": "./packages/ts/dist/*"
   },
-  "types": "./packages/ts/dist/mod.d.ts",
+  "types": "./packages/ts/dist/mod.ts",
+  "main": "./packages/ts/dist/mod.ts",
+  "module": "./packages/ts/dist/mod.ts",
   "sideEffects": false,
   "scripts": {
     "gen": "buf generate",
     "clean": "rimraf dist",
     "build": "pnpm run clean && pnpm run gen"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@bufbuild/protobuf": "^2.9.0"
+  },
   "devDependencies": {
     "@bufbuild/protoc-gen-es": "^1.9.0",
     "rimraf": "^6.0.0"
